--- a/yeogiseo/app/src/main/res/layout/activity_room.xml
+++ b/yeogiseo/app/src/main/res/layout/activity_room.xml
@@ -13,6 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <include
+        layout="@layout/chat_square"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:gravity = "bottom"
+        android:layout_alignParentBottom = "true"/>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
