--- a/yeogiseo/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/yeogiseo/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -7,21 +7,22 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:title="Picture 1" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="picture 2" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:title="picture 3" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="picture 4" />
     </group>
 
+    <!--
     <item android:title="Communicate">
         <menu>
             <item
@@ -34,5 +35,6 @@
                 android:title="@string/menu_send" />
         </menu>
     </item>
+    -->
 
 </menu>
