chat fragment initialized

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -20,8 +20,14 @@
         android:id="@+id/chat_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity = "bottom"
         android:layout_alignParentBottom = "true"/>
+
+    <fragment
+        android:name="com.example.yeogiseoapp.mapFragment"
+        android:id="@+id/map_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
@@ -32,13 +38,5 @@
         app:headerLayout="@layout/nav_header_drawer"
         app:menu="@menu/activity_drawer_drawer" />
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:gravity="bottom"
-        android:layout_alignParentBottom = "true"
-        >
-    </androidx.viewpager.widget.ViewPager>
 
 </androidx.drawerlayout.widget.DrawerLayout>
