--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -21,7 +21,7 @@
         android:layout_toStartOf="@+id/sendbtn"
         android:layout_marginBottom="10dp"
         android:ems="10"
-        android:hint="메세지를 입력해."
+        android:hint="메세지를 입력하세요."
         android:inputType="textPersonName" />
 
         <Button
@@ -32,5 +32,5 @@
             android:layout_alignParentRight="true"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Button"/>
+            android:text="Send"/>
 </RelativeLayout>
