--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_above="@+id/message"
+        android:padding="5dp"
         android:scrollbars="vertical" />
 
     <EditText
@@ -19,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toStartOf="@+id/sendbtn"
-        android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="메세지를 입력하세요."
         android:inputType="textPersonName" />
