--- a/app/src/main/res/layout/content_hall.xml
+++ b/app/src/main/res/layout/content_hall.xml
@@ -13,7 +13,10 @@ android:orientation="vertical"
 <ListView
     android:id="@+id/listview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:dividerHeight="10dp"
+    android:divider="#00000000">
 
 
 </ListView>
