chat room error & togetherAllow adding

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -13,4 +13,13 @@
         android:layout_height="390dp"
         android:layout_marginTop="50dp"/>
 
+    <Button
+        android:id="@+id/togetherBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="10dp"
+        android:text="같이보기"/>
+
 </RelativeLayout>
