--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -31,6 +31,12 @@
         android:layout_height="wrap_content"
         />
 
+    <FrameLayout
+        android:id="@+id/canvasfrag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
