--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,8 @@
         android:layout_marginTop="252dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/inputdraw"
+        android:singleLine="true"
+        android:lines="1"
         android:hint="@string/prompt_email"
 
 
@@ -40,6 +42,8 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/inputdraw"
         android:hint="@string/prompt_password"
+        android:singleLine="true"
+        android:lines="1"
 
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
