--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_invite"
+        android:orderInCategory="100"
+        android:title="Invite"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_upload"
         android:orderInCategory="100"
         android:title="Upload"
