--- a/app/src/main/res/layout/hall_listview_attribute.xml
+++ b/app/src/main/res/layout/hall_listview_attribute.xml
@@ -44,7 +44,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="그룹 마스터 : "
+                    android:text="그룹 리더: "
                     android:id="@+id/creatText"
                     android:layout_centerVertical="true"
                     android:textSize="16dp"
