그룹 참가시 스케쥴 조회->사진 정보 받아오기 순으로 변경함.
업로드와 병행할 수 있도록 함. 이미지 삭제 구현 완료

--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -81,6 +81,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/picBodyImage"
+                    android:id="@+id/pictureId"
+                    android:layout_margin="@dimen/picinfo_vertical_spacing"
+                    android:text="pictureId"
+                    android:textSize="15dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/pictureId"
                     android:id="@+id/pictureTime"
                     android:layout_margin="@dimen/picinfo_vertical_spacing"
                     android:text="pictureTime"
