--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -74,14 +74,22 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/picBodyImage"
                     android:id="@+id/pictureId"
-                    android:layout_margin="@dimen/picinfo_vertical_spacing"
                     android:text="pictureId"
+                    android:textSize="0dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/picBodyImage"
+                    android:id="@+id/picturePath"
+                    android:layout_margin="@dimen/picinfo_vertical_spacing"
+                    android:text="picPath"
                     android:textSize="15dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/pictureId"
+                    android:layout_below="@+id/picturePath"
                     android:id="@+id/pictureTime"
                     android:layout_margin="@dimen/picinfo_vertical_spacing"
                     android:text="pictureTime"
