--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -113,13 +113,13 @@
                     android:text="pictureLongitude"
                     android:textSize="15dp"/>
 
-                <TextView
+                <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/pictureLongitude"
                     android:id="@+id/pictureComment"
                     android:layout_margin="@dimen/picinfo_vertical_spacing"
-                    android:text="Comment"
+                    android:hint="Comment"
                     android:textSize="15dp"/>
 
                 <Button
