--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -18,9 +18,9 @@
         android:title="Member List"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Refresh"
         app:showAsAction="never" />
 
     <item
